# image-optimizer

./: CLAUDE.md  Cargo.toml  README.md  install.ps1  install.sh  rustfmt.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: build.yml  test.yml
src/: lib.rs  main.rs  optimizer.rs  utils.rs
src/cli/: cli_args.rs  mod.rs
src/file_ops/: backup_manager.rs  byte_formatter.rs  image_scanner.rs  mod.rs  output_manager.rs  size_calculator.rs
src/optimization/: image_optimizer.rs  jpeg_optimizer.rs  mod.rs  png_optimizer.rs  svg_optimizer.rs  webp_optimizer.rs
src/updater/: executable_manager.rs  github_release.rs  mod.rs  platform_detector.rs  self_updater.rs  version_comparator.rs
tests/: integration_tests.rs
