[package]
name = "image-optimizer-rs"
version = "1.1.0"
edition = "2021"
description = "CLI tool for optimizing images (JPEG, PNG, WebP)"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
anyhow = "1.0"
mozjpeg = "0.10.13"
oxipng = { version = "9.0", features = ["zopfli"] }
webp = "0.3"
indicatif = "0.18"
rayon = { version = "1.11" }
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }

[lints.clippy]
unwrap_used = "deny"
panic = "deny"
unwrap_in_result = "deny"
# Detect unnecessary path prefixes and imports
enum_glob_use = "deny"
redundant_closure_for_method_calls = "deny"
unnecessary_wraps = "deny"
manual_let_else = "deny"
# Performance lints
large_enum_variant = "deny"
# Style lints for consistency
module_name_repetitions = "deny"

[lints.rust]
# Detect import and path quality issues
unused_imports = "deny"
single_use_lifetimes = "deny"
