[package]
name = "image-optimizer"
version = "1.4.1"
edition = "2024"
description = "CLI tool for optimizing images (JPEG, PNG, WebP, SVG)"
license = "MIT"
repository = "https://github.com/nixuuu/image-optimizer"
homepage = "https://github.com/nixuuu/image-optimizer"
documentation = "https://github.com/nixuuu/image-optimizer"
keywords = ["cli", "image", "optimization"]
categories = ["command-line-utilities", "multimedia::images"]
authors = ["nix"]
readme = "README.md"

[[bin]]
name = "image-optimizer"
path = "src/main.rs"

[lib]
name = "image_optimizer"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
anyhow = "1.0"
mozjpeg = "0.10.13"
oxipng = { version = "9.0", features = ["zopfli"] }
webp = "0.3"
indicatif = "0.18"
rayon = { version = "1.11" }
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
regex = "1.11"

[lints.clippy]
# Error handling
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
unwrap_in_result = "deny"
# Code quality and style
enum_glob_use = "deny"
redundant_closure_for_method_calls = "deny"
unnecessary_wraps = "deny"
manual_let_else = "deny"
module_name_repetitions = "deny"
# Performance
large_enum_variant = "deny"
# Pedantic lints for maximum code quality
pedantic = { level = "warn", priority = -1 }
# Nursery lints (experimental but useful)
nursery = { level = "warn", priority = -1 }

[lints.rust]
# Standard Rust lints
unused_imports = "deny"
single_use_lifetimes = "deny"
warnings = "deny"
